Added chdir to web.ini

--- a/idp/web/web.ini
+++ b/idp/web/web.ini
@@ -1,6 +1,7 @@
 [uwsgi]
 module = run_server:app
 logto = /var/log/idp/uwsgi.log
+chdir = /home/user1/open-id-connect/idp/web
 
 master = true
 processes = 5
