Adapted LDAP client to search for user object from base DN

--- a/idp/ansible/install.yaml
+++ b/idp/ansible/install.yaml
@@ -6,7 +6,11 @@
 - hosts: all
   user: user1
   roles:
-   - base
-   - idp
+#   - base
+#   - idp
+   - iptables
   vars:
     - enable_sshd_timeout: false
+    - iptables_inbound_ports:
+      - { protocol: 'tcp', port: 443 }
+
