--- a/ansible/install_idp.yml
+++ b/ansible/install_idp.yml
@@ -7,10 +7,11 @@
   user: user1
   roles:
    - base
-   - idp
+   - app
    - iptables
    - ssh
   vars:
+    - type: idp
     - enable_sshd_timeout: false
     - iptables_inbound_ports:
       - { protocol: 'tcp', port: 443 }
