--- a/ansible/roles/app/files/hippo-idp.service
+++ b/ansible/roles/app/files/hippo-idp.service
@@ -3,11 +3,11 @@ Description=uWSGI instance to serve Hippo IDP
 After=network.target
 
 [Service]
-User=idpservice
+User={{ type }}service
 Group=www-data
-WorkingDirectory=/home/idpservice/open-id-connect/idp/web
-Environment="PATH=/home/idpservice/open-id-connect/idp/web/bin"
-ExecStart=/home/idpservice/open-id-connect/idp/web/bin/uwsgi --ini web.ini
+WorkingDirectory=/home/{{ type }}service/open-id-connect/{{ type }}/web
+Environment="PATH=/home/{{ type }}service/open-id-connect/{{ type }}/web/bin"
+ExecStart=/home/{{ type }}service/open-id-connect/{{ type }}/web/bin/uwsgi --ini web.ini
 
 [Install]
 WantedBy=multi-user.target
