File renaming etc

--- a/idp/web/web.ini
+++ b/idp/web/web.ini
@@ -1,12 +1,12 @@
 [uwsgi]
 module = run_server:app
-logto = /var/log/idp/uwsgi.log
+logto = /var/log/hippo-idp/uwsgi.log
 chdir = /home/idpservice/open-id-connect/idp/web
 
 master = true
 processes = 5
 
-socket = /var/idp/hippo-idp.sock
+socket = /var/hippo-idp/hippo-idp.sock
 chmod-socket = 660
 vacuum = true
 
