--- a/ansible/Makefile
+++ b/ansible/Makefile
@@ -25,3 +25,7 @@ endif
 install-idp:
 	export ANSIBLE_HOST_KEY_CHECKING=False
 	ansible-playbook -i inventories/main --limit $(limit) install_idp.yml -u user1 --sudo --ask-pass --ask-sudo-pass $(params)
+
+install-ldap:
+	export ANSIBLE_HOST_KEY_CHECKING=False
+	ansible-playbook -i inventories/main --limit $(limit) install_ldap.yml -u user1 --sudo --ask-pass --ask-sudo-pass $(params)
