--- a/ldap/web/web.ini
+++ b/ldap/web/web.ini
@@ -1,12 +1,12 @@
 [uwsgi]
 module = run_server:app
-logto = /var/log/idp/uwsgi.log
-chdir = /home/idpservice/open-id-connect/idp/web
+logto = /var/log/hippo-ldap/uwsgi.log
+chdir = /home/ldapservice/open-id-connect/ldap/web
 
 master = true
 processes = 5
 
-socket = /var/idp/hippo-ldap.sock
+socket = /var/hippo-ldap/hippo-ldap.sock
 chmod-socket = 660
 vacuum = true
 
