--- a/ansible/roles/iptables/tasks/main.yml
+++ b/ansible/roles/iptables/tasks/main.yml
@@ -11,16 +11,15 @@
 - name: Allow localhost REDIS
   iptables: chain=INPUT source=localhost protocol=tcp destination_port=6379 jump=ACCEPT
 
+- name: Allow LDAP
+  iptables: chain=INPUT source=localhost protocol=tcp destination_port=389 jump=ACCEPT
+  when: type == "ldap"
+
 - name: Allow SSH
   iptables: chain=INPUT protocol=tcp destination_port=22 jump=ACCEPT
 
 - name: Allow HTTPS
   iptables: chain=INPUT protocol=tcp destination_port=443 jump=ACCEPT
-  when: type == "idp"
-
-- name: Allow LDAP
-  iptables: chain=INPUT protocol=tcp destination_port=389 jump=ACCEPT
-  when: type == "ldap"
 
 - name: Block all incoming
   iptables: chain=INPUT jump=DROP
